API call && render works

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,13 @@
+<!doctype html>
 <body>
   <header id="top">
     <h1>web app from scratch - class of 2020</h1>
     <h2>participants</h2>
     <nav>
+      <ul>
+        <li><a href="#/">Home</a></li>
+        <li><a href="#stats">yeet</a></li>
+      </ul>
       <form method="get" action="/search">
         <label>
           Zoeken
