--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -1,11 +1,24 @@
-<% include ('partials/head.ejs') %>
+<%- include('./partials/head.ejs') %>
+<%- include('./partials/header.ejs') %>
 
-<article>
-  <header>
-    <h1><%= story.sfeerwoord %></h1>
-  </header>
+<main>
+  <div id="overview">
+    <h1>Profiel</h1>
+    <article class="student">
+      <h3><% nerd.owner.login %></h3>
+      <div class="avatarWrapper">
+        <img class="avatar" id="avatar" src="<%= nerd.owner.avatar_url %>" alt="<%= nerd.full_name %>">
+      </div>
+      <p><%= nerd.description %></p>
+      <p><%= nerd.html_url %></p>
+      <p><%= nerd.homepage %></p>
+      <p><%= nerd.id %></p>
+      <p class="private"><%= nerd.private %></p>
+      <p><%= nerd.full_name %></p>
+    </article>
+  </div>
 
-  <img src="https://blokweb.org/uploads/<%= story.imgSmall %>" alt="<%= story.sfeerwoord %>">
-</article>
+  <a class="backToTop" href="#top">Back to top</a>
+</main>
 
-<% include ('partials/footer.ejs') %>
+<%- include('./partials/foot.ejs') %>
