--- a/views/course.ejs
+++ b/views/course.ejs
@@ -6,11 +6,11 @@
     <h1>Course-overview</h1>
     <% nerds.forEach((nerd)=> { %>
     <article class="student">
-      <a href="/nerds/<%= nerd.owner.login%>">Go to profile
+      <a href="/nerds/<%= nerd.name%>">Go to profile
       </a>
-      <h3><% nerd.owner.login %></h3>
+      <h3><% nerd.name %></h3>
       <div class="avatarWrapper">
-        <img class="avatar" id="avatar" src="<%= nerd.owner.avatar_url %>" alt="<%= nerd.full_name %>">
+        <img class="avatar" id="avatar" src="<%= nerd.avatar %>" alt="<%= nerd.full_name %>">
       </div>
       <p><%= nerd.description %></p>
       <p><%= nerd.html_url %></p>
