--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,21 +3,21 @@
 
 <main>
   <div id="overview">
-    <h1>nerds-overview</h1>
-    <% nerds.forEach((nerd)=> { %>
+    <h1>All courses</h1>
+    <% repos.forEach((repo)=> { %>
     <article class="student">
-      <a href="/nerds/<%= nerd.owner.login%>">sedgvsdngvksd gkfj 
+      <a href="/course/<%= repo.courseName %>"> Go to course
       </a>
-      <h3><% nerd.owner.login %></h3>
+      <h3><% repo.name %></h3>
       <div class="avatarWrapper">
-        <img class="avatar" id="avatar" src="<%= nerd.owner.avatar_url %>" alt="<%= nerd.full_name %>">
+        <img class="avatar" id="avatar" src="<%= repo.avatar %>" alt="<%= repo.full_name %>">
       </div>
-      <p><%= nerd.description %></p>
-      <p><%= nerd.html_url %></p>
-      <p><%= nerd.homepage %></p>
-      <p><%= nerd.id %></p>
-      <p class="private"><%= nerd.private %></p>
-      <p><%= nerd.full_name %></p>
+      <p><%= repo.description %></p>
+      <p><%= repo.html_url %></p>
+      <p><%= repo.homepage %></p>
+      <p><%= repo.id %></p>
+      <p class="private"><%= repo.private %></p>
+      <p><%= repo.full_name %></p>
       <% }) %>
     </article>
   </div>
