change title to generic title

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,5 +4,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/styles.css" />
-  <title>PWA - Minor Web Development</title>
+  <title>Minor Web Development</title>
 </head>
