--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,11 @@
 <!doctype html>
 <body>
   <header id="top">
-    <h1>web app from scratch - class of 2020</h1>
+    <h1>Minor Web Development</h1>
     <h2>participants</h2>
     <nav>
       <ul>
-        <li><a href="#/">Home</a></li>
-        <li><a href="#stats">yeet</a></li>
+        <li><a href="/">Home</a></li>
       </ul>
       <form method="get" action="/search">
         <label>
