change 'go to course'-link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <h1>All courses</h1>
     <% repos.forEach((repo)=> { %>
     <article class="student">
-      <a href="/course/<%= repo.courseName %>"> Go to course
+      <a href="/course/<%= repo.name %>"> Go to course
       </a>
       <h3><% repo.name %></h3>
       <div class="avatarWrapper">
