--- a/views/course.ejs
+++ b/views/course.ejs
@@ -6,7 +6,7 @@
     <h1>Course-overview</h1>
     <% nerds.forEach((nerd)=> { %>
     <article class="student">
-      <a href="/nerds/<%= nerd.name%>">Go to profile
+      <a href="/nerds/<%= nerd.full_name%>/">Go to profile
       </a>
       <h3><% nerd.name %></h3>
       <div class="avatarWrapper">
