--- a/views/nerd.ejs
+++ b/views/nerd.ejs
@@ -4,18 +4,20 @@
 <main>
   <div id="overview">
     <h1>Profiel voor <%= userName %></h1>
-    <% nerd.forEach((nerd)=> { %>
+    <% nerd.forEach((repo)=> { %>
     <article class="student">
-      <h3><%= nerd.name %></h3>
+      <h3><%= repo.name %></h3>
+        <a href="/nerds/<%= repo.full_name %>"> Go to repo
+        </a>
       <div class="avatarWrapper">
-        <img class="avatar" id="avatar" src="<%= nerd.owner.avatar_url %>" alt="<%= nerd.full_name %>">
+        <img class="avatar" id="avatar" src="<%= repo.owner.avatar_url %>" alt="<%= repo.full_name %>">
       </div>
-      <p><%= nerd.description %></p>
-      <p><%= nerd.html_url %></p>
-      <p><%= nerd.homepage %></p>
-      <p><%= nerd.id %></p>
-      <p class="private"><%= nerd.private %></p>
-      <p><%= nerd.full_name %></p>
+      <p><%= repo.description %></p>
+      <p><%= repo.html_url %></p>
+      <p><%= repo.homepage %></p>
+      <p><%= repo.id %></p>
+      <p class="private"><%= repo.private %></p>
+      <p><%= repo.full_name %></p>
     </article>
     <% }) %>
   </div>
