--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
       </ul>
       <form method="get" action="/search">
         <label>
-          Zoeken
+          Zoek naar een student
           <input type="search" name="query">
         </label>
       </form>
