--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,6 @@
 <!doctype html>
 <body>
-  <header id="top">
-    <h1>Minor Web Development</h1>
-    <h2>participants</h2>
+  <header class="header" id="top">
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
@@ -14,4 +12,5 @@
         </label>
       </form>
     </nav>
+    <h1 class="headerTitle">Minor Web Development</h1>
   </header>
