--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,13 +2,14 @@
 :root {
   --purpleGrey: rgb(114,92,122, 0.2)
 }
+@import 'reset.css';
+
 
 * {
   box-sizing: border-box;
 }
 
 a {
-  /* font-size: 3rem; */
 }
 
 html {
@@ -19,61 +20,42 @@ html {
 
 body {
   background-color: #000;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows auto;
+  grid-template-areas:
+    "header"
+    "main";
 }
 
 header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  grid-area: header;
   color: white;
   font-weight: bold;
   font-variant: small-caps;
   background-color: #4b0082;
+  display: grid;
+  grid-template-columns: 10vw 45vw 45vw;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "nav headerTitle headerTitle"
+}
+
+.headerTitle {
+  grid-area: headerTitle;
+}
+
+nav {
+  grid-area: nav;
 }
 
 main {
-  justify-content: center;
-  margin: 0.5rem;
+  grid-area: main;
 }
 
 section {
-  opacity: 0;
-  margin: 0.5rem;
-  /* display: flex; */
-  /* background-color: light grey; */
-  text-align: center;
-  position: absolute;
 }
 
-section[data-route="/"]:active {
-  position: absolute;
-  z-index: 5;
-}
-
-section[data-route="stats"]:active {
-  position: absolute;
-  z-index: 5;
-}
-section[data-route="profile"]:active {
-  position: absolute;
-  z-index: 5;
-}
-
-#oneNerd{
-  z-index: -20;
-}
-/*
-section[data-route="progress"] {
-  background-color: #ccccff;
-} */
-
-.active {
-  opacity: 1;
-}
-/* section.active {
-  opacity: 1;
-} */
 
 h1 {
   font-size: 3rem;
@@ -93,17 +75,12 @@ h3 {
 p {
   max-width: 100%;
   font-size: 1.2rem;
-  margin: 0.7rem;
 }
 
 ul {
   background-color: white;
   padding: 2rem;
-  margin: 1rem;
   z-index: 10;
-  max-width: 10%;
-  justify-content: center;
-  align-content: center;
 }
 
 ul li {
@@ -111,12 +88,9 @@ ul li {
 }
 
 /* LAYOUT */
-#overview {
-  display: flex;
-  flex-wrap: wrap;
-  /* background-color: yellow; */
-  justify-content: center;
-}
+/* .overview {
+  display: grid;
+} */
 
 /* MODULES */
 .backToTop {
@@ -131,13 +105,9 @@ ul li {
 
 .student {
   padding: 2rem;
-  margin: 2rem;
   background-color: #f8f8f8;
   border-radius: 25px;
   box-shadow: 10px 10px 6px -8px rgba(255, 255, 255, 1);
-  min-width: 20%;
-  width: 26vw;
-  text-align: left;
 }
 
 .avatar {
